testcases/bad/templates/for-missing-if.j2
{% for x in xs %}
  {% notanif %}
    go to town
  {% endif %}
{% endfor %}
